overflow fixes

--- a/css/style.scss
+++ b/css/style.scss
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden;
 }
 
 :root {
@@ -35,6 +34,7 @@ img {
     justify-content: flex-start;
     align-items: center;
     margin-bottom: 2em;
+    overflow-x: hidden;
 
     .logo {
         width: 88px;
@@ -49,6 +49,7 @@ img {
     display: flex;
     flex-wrap: wrap;
     position: relative;
+    overflow-x: hidden;
 
     .hero-text {
         width: 100%;
